--- a/template/index.jade
+++ b/template/index.jade
@@ -3,9 +3,10 @@ html
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible",content="chrome=1")
     meta(name="viewport",content="initial-scale=1.0, user-scalable=no, width=device-width")
-    link(rel="stylesheet",href="http://openlayers.org/en/v3.0.0/css/ol.css",type="text/css")
-    script(src="./js/jquery.min.js",type="text/javascript")
-    script(src="http://openlayers.org/en/v3.0.0/build/ol.js",type="text/javascript")
+    link(rel="stylesheet",href="./css/ol.css",type="text/css")
+    link(rel="stylesheet",href="./css/layerswitcher.css",type="text/css")
+    // script(src="./js/jquery.min.js",type="text/javascript")
+    script(src="./js/ol.js",type="text/javascript")
     title Map
   body
     div#map.map
