added own style

--- a/styles/mystyle.less
+++ b/styles/mystyle.less
@@ -83,6 +83,12 @@
 
   [zoom>=15]{
 
+    text-position: 'path';
+    text-tag: 'name';
+    text-size: 10;
+    text-color: black;
+    text-halo-width: 0.1;
+    text-halo-color: white;
 
     [highway=track]{
       color: white;
