extended geocoder, now returns line, excat match, next lower and higher match

--- a/styles/mystyle.less
+++ b/styles/mystyle.less
@@ -37,6 +37,7 @@
       text-color: blue;
       text-halo-width: 0.5;
       text-halo-color: white;
+
     }
 
   }
@@ -82,6 +83,8 @@
       text-color: black;
       text-halo-width: 1;
       text-halo-color: white;
+      /*line-shadow: 1;*/
+      /*line-shadow-color: rgb(0,0,0);*/
     }
 
     [highway=track],[highway=unclassified]{
