--- a/public/css/layerswitcher.css
+++ b/public/css/layerswitcher.css
@@ -1,3 +1,15 @@
+.ol-zoomdisplay{
+  position: absolute;
+  padding: 5px;
+  right: 0.5em;
+  bottom: 2em;
+  background-color: #fff;
+  background-color: rgba(255,255,255,.65);
+  border-radius: 2px;
+  font-family: 'Lucida Grande',Verdana,Geneva,Lucida,Arial,Helvetica,sans-serif;
+  font-size: 0.7em;
+}
+
 .ol-layerswitcher{
   position: absolute;
   padding: 5px;
