--- a/template/index.jade
+++ b/template/index.jade
@@ -7,6 +7,8 @@ html
     link(rel="stylesheet",href="./css/layerswitcher.css",type="text/css")
     // script(src="./js/jquery.min.js",type="text/javascript")
     script(src="./js/ol.js",type="text/javascript")
+    script(src="./js/LayerSwitcher.js",type="text/javascript")
+    script(src="./js/ZoomDisplay.js",type="text/javascript")
     title Map
   body
     div#map.map
